Bug 521109 - Plasma browser integration fails for edge on KDE-Linux Plasma 6.7.8?
Summary: Plasma browser integration fails for edge on KDE-Linux Plasma 6.7.8?
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: Chrome (other bugs)
Version First Reported In: unspecified
Platform: KDE Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-05 20:21 UTC by Byron Bassett
Modified: 2026-06-11 15:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Byron Bassett 2026-06-05 20:21:09 UTC
DESCRIPTION
Plasma Browser integration on Edge fails with message failed to connect to the native host


STEPS TO REPRODUCE
1. Run any edge browser
2. Install Plasma integration - Pin to task bar
3. Touch the icon (Note has red diagonal line through it)

OBSERVED RESULT

ails with message failed to connect to the native host
EXPECTED RESULT
comment is to what it is

ails with message failed to connect to the native host
ADDITIONAL INFORMATION
Operating System: KDE Linux 2026-06-05
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 9 6900HX with Radeon Graphics
Memory: 32 GiB of RAM (30.6 GiB usable)
Graphics Processor: AMD Radeon 680M

Edge -- Version 149.0.4022.52 (Official build) (64-bit)
Comment 1 Conley Dawson 2026-06-05 20:44:33 UTC
I can replicate this on KDE Linux 2026-06-05.

It looks like Plasma Browser Integration does not currently include a case for Edge.

https://invent.kde.org/plasma/plasma-browser-integration/-/blob/master/flatpak-integrator/plugin.cpp?ref_type=heads#L140

        // List of Flatpak browsers we support.
        const QList<BrowserInfo> supportedBrowsers = {
            {BrowserBase::Firefox, u"org.mozilla.firefox"_s, u"/.mozilla/native-messaging-hosts"_s},
            {BrowserBase::Firefox, u"io.gitlab.librewolf-community"_s, u"/.librewolf/native-messaging-hosts"_s},
            {BrowserBase::Firefox, u"net.waterfox.waterfox"_s, u"/.waterfox/native-messaging-hosts"_s},
            {BrowserBase::Chrome, u"com.google.Chrome"_s, u"/config/google-chrome/NativeMessagingHosts"_s},
            {BrowserBase::Chrome, u"com.google.ChromeDev"_s, u"/config/google-chrome-unstable/NativeMessagingHosts"_s},
            {BrowserBase::Chromium, u"org.chromium.Chromium"_s, u"/config/chromium/NativeMessagingHosts"_s},
            {BrowserBase::Chromium, u"io.github.ungoogled_software.ungoogled_chromium"_s, u"/config/chromium/NativeMessagingHosts"_s},
        };
Comment 2 Byron Bassett 2026-06-06 15:57:43 UTC
Just a thought - Edge is a chromium product (Chrome?) so figured that if 
Chrome covered so would products built on the same base - The chrome 
store can be used by Edge in the past -- I guess that may not be true -- 
BTW this works well on Manjaro KDE desktop plasma 6.6.5

On 6/5/26 1:44 PM, Conley Dawson wrote:
> https://bugs.kde.org/show_bug.cgi?id=521109
>
> Conley Dawson <conley@macver.org> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |conley@macver.org
>
> --- Comment #1 from Conley Dawson <conley@macver.org> ---
> I can replicate this on KDE Linux 2026-06-05.
>
> It looks like Plasma Browser Integration does not currently include a case for
> Edge.
>
> https://invent.kde.org/plasma/plasma-browser-integration/-/blob/master/flatpak-integrator/plugin.cpp?ref_type=heads#L140
>
>          // List of Flatpak browsers we support.
>          const QList<BrowserInfo> supportedBrowsers = {
>              {BrowserBase::Firefox, u"org.mozilla.firefox"_s,
> u"/.mozilla/native-messaging-hosts"_s},
>              {BrowserBase::Firefox, u"io.gitlab.librewolf-community"_s,
> u"/.librewolf/native-messaging-hosts"_s},
>              {BrowserBase::Firefox, u"net.waterfox.waterfox"_s,
> u"/.waterfox/native-messaging-hosts"_s},
>              {BrowserBase::Chrome, u"com.google.Chrome"_s,
> u"/config/google-chrome/NativeMessagingHosts"_s},
>              {BrowserBase::Chrome, u"com.google.ChromeDev"_s,
> u"/config/google-chrome-unstable/NativeMessagingHosts"_s},
>              {BrowserBase::Chromium, u"org.chromium.Chromium"_s,
> u"/config/chromium/NativeMessagingHosts"_s},
>              {BrowserBase::Chromium,
> u"io.github.ungoogled_software.ungoogled_chromium"_s,
> u"/config/chromium/NativeMessagingHosts"_s},
>          };
>
Comment 3 Bug Janitor Service 2026-06-06 23:29:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-browser-integration/-/merge_requests/198
Comment 4 Conley Dawson 2026-06-07 20:51:29 UTC
Git commit 00f915811c1811b618c255f50b37af4b84b0bbf8 by Conley Dawson.
Committed on 07/06/2026 at 20:31.
Pushed by fvogt into branch 'master'.

Add support for Micrsoft Edge flatpak

M  +1    -0    flatpak-integrator/plugin.cpp

https://invent.kde.org/plasma/plasma-browser-integration/-/commit/00f915811c1811b618c255f50b37af4b84b0bbf8