Add support for Micrsoft Edge flatpak

BUG: 521109