flatpak-integrator/plugin.cpp
@@ -146,6 +146,7 @@ public:
             {BrowserBase::Chrome, u"com.google.ChromeDev"_s, u"/config/google-chrome-unstable/NativeMessagingHosts"_s},
             {BrowserBase::Chromium, u"org.chromium.Chromium"_s, u"/config/chromium/NativeMessagingHosts"_s},
             {BrowserBase::Chromium, u"io.github.ungoogled_software.ungoogled_chromium"_s, u"/config/chromium/NativeMessagingHosts"_s},
+            {BrowserBase::Chromium, u"com.microsoft.Edge"_s, u"/config/microsoft-edge/NativeMessagingHosts"_s},
         };
 
         // Set up Flatpak permissions for each browser
